examples/json/tests/data/wrong_key.diag
error: invalid syntax, expected one of: '}', <string>
  ┌─ <input>:1:3
  │
1 │ { 1: 2 }
  │   ^

